# grote

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  grote.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
assets/examples/: en_it.txt  en_it_no_highlights.txt  en_ru.txt  src_en.txt  tgt_it_with_highlights.txt
examples/: tgt_it_with_highlights.txt
grote/: app.py  config.py  config.yaml  demo.py  event_logging.py  style.py  utils.py
grote/collections/: base.py  config.yaml  load.py  translate.py
grote/functions/: __init__.py  load.py  translate.py
